<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">munch</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Munch!</string>
    <string name="loginText">Please Log In</string>
    <string name="login">Login</string>
    <string name="logout">Log me out</string>
    <string name="emailText">Enter Your Email Address</string>
    <string name="passwordText">Enter Your Password</string>
    <string name="registerText">Register New Account</string>
    <string name="forgotText">Forgot Email/Password</string>
    <string name="munchLogo">Munch Logo</string>
    <string name="chooseRole">Please choose your role:</string>
    <string name="shopperText">Shopper</string>
    <string name="hungryPersonText">Hungry Person</string>
    <string name="registerNewText">New to Munch? Register here</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginHere">Already have account? Login here</string>
    <string name="already">I don\'t have account. Register Me!</string>
    <string name="title_activity_add_ingredient">AddIngredient</string>
    <string name="typeIngredient">Type Ingredient Here</string>
    <string name="title_activity_add__ingredient">Add_Ingredient</string>
    <string name="selectIngredients">Select Ingredients</string>
    <string name="selectRecipes">Select Recipe</string>
    <string name="submitButton">submit</string>
    <string name="filterHintIngredients">Type to filter ingredients</string>
    <string name="filterHintRecipes">Filter Recipes by Name</string>
    <string name="filter">filter</string>
    <string name="activeIngredientText">My Ingredients</string>
    <string name="addButton">Add Ingredient</string>
    <string name="searchRecipes">Search for Recipes</string>
    <string name="removeButton">Remove Ingredient</string>
    <string name="browseIngredients">Browse Ingredients</string>
    <string name="inventory">My Inventory</string>
    <string name="addInventory">Add to Inventory</string>
    <string name="addShopping">Add to Shopping List</string>
    <string name="shopping">My Shopping List</string>
    <string name="useMenu">Swipe from the left edge of the screen to the right to see the menu.</string>
    <string name="allRec">All Recipes</string>
    <string name="recipes">Recipes</string>
    <string name="inventoryRec">Inventory Recipes</string>
    <string name="exact">Exact</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Browse Ingredients</item>
        <item >View Inventory</item>
        <item >Browse Recipes</item>
        <item >Shopping List</item>
        <item >About Munch</item>
        <item >Logout</item>
        
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_logout</item>
        
    </array>

    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Google Maps v2 API key(debug) -->
    <string name="mapkey">AIzaSyA_X1p_F03ROo2GwfoBMhn_NwI3Ziao6d8</string>
 
</resources>
