<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/munchLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/munchLogo"
        android:src="@drawable/munch_logo" />

	<TextView
        android:id="@+id/chooseRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/chooseRole"
        android:textSize="44.5dp"
        android:textColor="#FFFFFF" />

	
	<TextView
        android:id="@+id/hungryPersonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/hungryPersonText"
        android:textSize="25sp"
        android:textColor="#FFFFFF" />
	<ImageButton
	    android:id="@+id/hungryButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/hungryPersonText"
	    android:layout_gravity="center"
	    android:layout_marginTop="5dp"
	    android:src="@drawable/hungry_icon" />

	
	<TextView
        android:id="@+id/shopperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/shopperText"
        android:textSize="25sp"
        android:textColor="#FFFFFF" />
	<ImageButton
	    android:id="@+id/shopperButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/shopperText"
	    android:layout_gravity="center"
	    android:layout_marginTop="5dp"
	    android:src="@drawable/shopper_icon" />

</LinearLayout>