<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background"
    android:orientation="vertical" >
    
       <TextView
       android:id="@+id/tvRecipeHeader"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:text="Recipes"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="@color/white" />
        
    <Button
        android:id="@+id/btnFilterRecipe"
        android:layout_width="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/filterRecipeText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/filterRecipeText"
        android:text="@string/filter"
        android:textColor="@color/white" />
    
    <ListView
        android:id="@+id/recipeListView"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_below="@+id/filterRecipeText"
        android:choiceMode="singleChoice"
        android:layout_above="@+id/buttonLayout"
        android:listSelector="@color/garnet" >
    </ListView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        
        <Button
            android:id="@+id/btnInv"
            style="?android:attr/buttonStyleSmall"
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="PopulateSpinner"
            android:text="@string/inventoryRec"
            android:layout_weight="1" />
        
        <Button
            android:id="@+id/btnAllRecipes"
            style="?android:attr/buttonStyleSmall"
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allRec"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:id="@+id/filterRecipeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvRecipeHeader"
        android:layout_toLeftOf="@+id/btnFilterRecipe"
        android:ems="10"
        android:hint="@string/filterHintRecipes"
        android:textColor="@color/white"
        android:singleLine="true" />

</RelativeLayout>